Add controllers and services for game assets and their types

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 .idea/**/contentModel.xml
 
 # Sensitive or high-churn files
+.idea/httpRequests/
 .idea/**/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.local.xml
